--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     list-style-type: none;
     height: 100%;
     margin-bottom: 0px;
+    justify-content: space-evenly;
 }
 
 .list-item li {
@@ -54,6 +55,8 @@ body {
 .list-item a {
     font-size: 11px;
     color: rgb(165, 163, 163) !important;
+    display: flex;
+    flex-direction: column;
 }
 
 .col-7 {
@@ -61,13 +64,18 @@ body {
 }
 
 .middle-items {
-    float: right;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: right;
 }
+
 .middle-items li {
     display: flex;
     justify-content: space-evenly;
     margin-right: 15px;
 }
+
 .middle-items li i {
     font-size: 17px !important;
 }
@@ -82,11 +90,12 @@ body {
 }
 
 .col-3 .company-info {
-    position: relative;
     padding-right: 19px;
     display: flex;
     justify-content: right;
-   
+    align-items: center;
+    height: 100%;
+    list-style-type: none;
 }
 
 .company-info .company-name {
@@ -95,7 +104,6 @@ body {
     text-decoration: none;
     color: #2c2a2a !important;
     margin-left: 5px;
-    
 }
 
 .project-active {
@@ -109,9 +117,11 @@ body {
     color: rgb(83, 82, 82);
     margin-right: 5px;
 }
-.company-info li{
+
+.company-info li {
     padding-left: 5px;
 }
+
 .pro-inventory {
     white-space: nowrap;
 }
@@ -308,7 +318,7 @@ a:link {
 
 .divider {
     border: 1px solid rgb(238, 234, 234);
-    margin:0px 9px;
+    margin: 0px 9px;
 }
 
 .detail-secondary {
@@ -403,8 +413,6 @@ a:link {
     margin-top: -12px !important;
 }
 
-
-
 .row-collapse-set {
     margin-bottom: 5px;
 }
@@ -442,7 +450,8 @@ h1 {
     transition: all 0.3s ease-in-out;
     font-size: 14px;
 }
-.collapse-items{
+
+.collapse-items {
     margin-left: 8px;
 }
 
@@ -457,9 +466,11 @@ h1 {
     text-decoration: none !important;
     color: #2586cb !important;
 }
-.card-body{
+
+.card-body {
     padding: 18px 7px;
 }
+
 .card-body h5 {
     color: #706d6d;
     font-size: 15px;
@@ -473,7 +484,6 @@ h1 {
 
 .row-detail {
     margin-top: 11px;
-
 }
 
 h6 {
@@ -483,8 +493,6 @@ h6 {
 a {
     color: #2586cb !important;
 }
-
-
 
 .card-body-heading a {
     font-size: 13px;
@@ -520,7 +528,6 @@ a {
 .inner-header {
     color: #2586cb !important;
     font-weight: 400 !important;
-    padding: 12px 10px;
     font-size: 14px !important;
 }
 
@@ -543,51 +550,61 @@ a {
 .form-control-sm::placeholder {
     color: #dbd8d8 !important;
 }
-.btn{
+
+.btn {
     border-radius: 6px !important;
 }
+
 .user-related a::before {
     content: '-';
     float: left;
-    line-height: 2.7;
+    line-height: 1;
+    width: 12px;
+    padding: 0px 4px 0px 0px;
 }
 
 .user-related a.collapsed::before {
     content: '+';
-    line-height: 2.7;
+    line-height: 1;
+    width: 12px;
+    padding: 0px 4px 0px 0px;
 }
 
 .attach-doc a::before {
     content: '-';
     float: left;
-    line-height: 2.7;
+    width: 12px;
+    line-height: 1;
+    padding: 0px 4px 0px 0px;
 }
 
 .attach-doc a.collapsed::before {
     content: '+';
-    line-height: 2.7;
+    line-height: 1;
+    width: 12px;
+    padding: 0px 4px 0px 0px;
 }
-.separate-line{
+
+.separate-line {
     height: 15px;
     background-color: #c1b9b9;
     width: 1px;
     margin-top: 2px;
 }
+
 .main-title>a ::after {
     content: "\2303";
     float: right;
     color: rgb(42, 108, 207);
-    font-size: 22px;
-    border: 1px solid rgb(204, 220, 245);
-    border-radius: 3px;
-    padding: 9px 3px;
+    font-size: 15px;
+    border: 1px solid rgb(144 181 238);
+    padding: 8px 5px 12px 5px;
     display: inline-block;
     text-align: center;
     line-height: 0.5;
     height: 1px;
-    font-weight: 500;
+    font-weight: 600;
     border-radius: 6px;
-    margin:-5px 8px 0px 0px;
 }
 
 .main-title>a.collapsed ::after {
@@ -595,16 +612,15 @@ a {
     transform: rotate(180deg);
     float: right;
     color: rgb(42, 108, 207);
-    font-size: 22px;
-    border: 1px solid rgb(204, 220, 245);
-    padding: 9px 3px;
+    font-size: 15px;
+    border: 1px solid rgb(144 181 238);
+    padding: 8px 5px 12px 5px;
     display: inline-block;
     text-align: center;
     line-height: 0.5;
     height: 1px;
-    font-weight: 500;
+    font-weight: 600;
     border-radius: 6px;
-    margin:-5px 8px 0px 0px;
 }
 
 
@@ -629,8 +645,6 @@ a {
     margin-right: -3px;
     border-radius: 5px 0px 0px 5px !important;
 }
-
-
 
 .button-carret {
     padding: 5px 7px !important;
@@ -660,7 +674,25 @@ a {
     color: #acabab;
     font-weight: 400 !important;
 }
+
 .actual-project-row {
     padding-bottom: 25px;
     margin-bottom: 10px;
+}
+
+.fa-folder-plus {
+    font-size: 20px;
+    color: rgba(245, 218, 66, 0.971);
+    text-align: center;
+}
+
+.upload-doc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.upload-doc span {
+    margin-top: 8px;
 }
